# mwl

./: .gitignore  CMakeLists.txt  README.md
examples/: CMakeLists.txt  draw_screen_buffer.cpp  example_helper.hpp  fullscreen.cpp  input.cpp  simple_window.cpp
include/mwl/: mwl.hpp  mwl_input.hpp
src/: CMakeLists.txt  mwl.cpp  mwl_impl.hpp  mwl_linux_input_tables.hpp  mwl_wayland.cpp  mwl_wayland.hpp  mwl_win32.cpp  mwl_win32.hpp
